moved footer div style to specific breakpoint to prevent no render on smallest breakpoint

--- a/app/components/footer/footer.component.less
+++ b/app/components/footer/footer.component.less
@@ -40,6 +40,11 @@
     .display640 {
       display:none;
     }
+    .displayDesktop{
+      div {
+        width:100%;
+      }
+    }
   }
   &-main{
     background-color: @fontIconGrey;
@@ -48,9 +53,6 @@
     .flexAlignItems(center);
     .flexDisplay;
     .flexDirection(column);
-    div {
-      width:100%;
-    }
     h1{
       .globalDefaultModFont(30px, 800,@strokeGrey);
     }// h1 ends
